--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,15 @@ allprojects {
     }
 }
 
+ext {
+    rxjavaVersion = "2.2.12"
+    rxandroidVersion = "2.1.1"
+    okhttpVersion = "3.12.3"
+    retrofitVersion = "2.7.2"
+    glideVersion = "4.11.0"
+    rxlifecycleVersion = "3.0.0"
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
