--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ ext {
     bannerVersion = "2.2.7@aar"
     refreshLayoutVersion = "1.1.0"
     refreshHeaderVersion = "1.1.0"
+    eventBusVersion = "3.2.0"
 }
 
 task clean(type: Delete) {
