--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,17 +31,20 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.android.support:design:29.0.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //android官方依赖包
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
+
     //第三方依赖包
+    //implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
     //rxjava 已存在3.0版本
     implementation "io.reactivex.rxjava2:rxjava:$rootProject.ext.rxjavaVersion"
     //rxandroid
@@ -53,12 +56,16 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofitVersion"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$rootProject.ext.retrofitVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.okhttpVersion"
-    implementation "com.orhanobut:logger:1.15"
+
+    implementation "com.orhanobut:logger:2.1.1"
     implementation "com.github.bumptech.glide:glide:$rootProject.ext.glideVersion"
     implementation "cn.bingoogolapple:bga-banner:$rootProject.ext.bannerVersion"
     implementation "com.scwang.smartrefresh:SmartRefreshLayout:$rootProject.ext.refreshLayoutVersion"
     implementation "com.scwang.smartrefresh:SmartRefreshHeader:$rootProject.ext.refreshHeaderVersion"
     implementation "org.greenrobot:eventbus:$rootProject.ext.eventBusVersion"
-
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
+    implementation 'com.afollestad.material-dialogs:core:3.1.1'
+    implementation 'com.wang.avi:library:2.1.3'
+
+
 }
