--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name="com.zs.wanandroid.ui.collect.CollectActivity"></activity>
         <activity
-            android:name="com.zs.wanandroid.SplashActivity"
+            android:name="com.zs.wanandroid.ui.SplashActivity"
             android:screenOrientation="portrait"
             android:theme="@style/SplashTheme">
             <intent-filter>
@@ -26,21 +27,18 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!--设置-->
-        <activity android:name="com.zs.wanandroid.main.set.SetActivity"
-            android:screenOrientation="portrait"/>
-        <!--主界面-->
+        </activity> <!-- 设置 -->
         <activity
-            android:name="com.zs.wanandroid.main.MainActivity"
-            android:screenOrientation="portrait" />
-        <!--登陆-->
+            android:name="com.zs.wanandroid.ui.set.SetActivity"
+            android:screenOrientation="portrait" /> <!-- 主界面 -->
         <activity
-            android:name="com.zs.wanandroid.main.login.LoginActivity"
-            android:screenOrientation="portrait" />
-        <!--web-->
+            android:name="com.zs.wanandroid.ui.main.MainActivity"
+            android:screenOrientation="portrait" /> <!-- 登陆 -->
         <activity
-            android:name="com.zs.wanandroid.main.web.WebActivity"
+            android:name="com.zs.wanandroid.ui.login.LoginActivity"
+            android:screenOrientation="portrait" /> <!-- web -->
+        <activity
+            android:name="com.zs.wanandroid.ui.web.WebActivity"
             android:screenOrientation="portrait" />
     </application>
 
