--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 29
@@ -25,6 +26,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    greendao {
+        schemaVersion 1 //当前数据库版本
     }
 
 }
@@ -67,6 +72,6 @@ dependencies {
     //dialog
     implementation 'com.afollestad.material-dialogs:core:3.3.0'
     implementation 'com.wang.avi:library:2.1.3'
-
+    implementation 'org.greenrobot:greendao:3.2.2'
 
 }
