新建漂亮女孩界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.zs.wanandroid.ui.search.SearchActivity"></activity>
+        <activity android:name="com.zs.wanandroid.ui.girl.GirlActivity"></activity>
+        <activity android:name="com.zs.wanandroid.ui.search.SearchActivity" />
         <activity
             android:name="com.zs.wanandroid.ui.SplashActivity"
             android:screenOrientation="portrait"
