--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.zs.wanandroid.ui.girl.GirlActivity"></activity>
         <activity android:name="com.zs.wanandroid.ui.search.SearchActivity" />
         <activity
             android:name="com.zs.wanandroid.ui.SplashActivity"
             android:screenOrientation="portrait"
+            android:launchMode="singleTask"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,19 +31,28 @@
         </activity> <!-- 设置 -->
         <activity
             android:name="com.zs.wanandroid.ui.set.SetActivity"
-            android:screenOrientation="portrait" /> <!-- 主界面 -->
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask"/> <!-- 主界面 -->
         <activity
             android:name="com.zs.wanandroid.ui.main.MainActivity"
-            android:screenOrientation="portrait" /> <!-- 登陆 -->
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask"/> <!-- 登陆 -->
         <activity
             android:name="com.zs.wanandroid.ui.login.LoginActivity"
-            android:screenOrientation="portrait" /> <!-- web -->
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask"/> <!-- web -->
         <activity
             android:name="com.zs.wanandroid.ui.web.WebActivity"
-            android:screenOrientation="portrait" /> <!-- 收藏 -->
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask"/> <!-- 收藏 -->
         <activity
             android:name="com.zs.wanandroid.ui.collect.CollectActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask"/>
+        <activity android:name="com.zs.wanandroid.ui.girl.GirlActivity"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask"/>
+
     </application>
 
 </manifest>
