--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.zs.wanandroid.ui.search.SearchActivity" />
         <activity
             android:name="com.zs.wanandroid.ui.SplashActivity"
             android:screenOrientation="portrait"
@@ -28,27 +27,37 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- 设置 -->
+        </activity>
+        <!-- 设置 -->
         <activity
             android:name="com.zs.wanandroid.ui.set.SetActivity"
             android:screenOrientation="portrait"
-            android:launchMode="singleTask"/> <!-- 主界面 -->
+            android:launchMode="singleTask"/>
+        <!-- 主界面 -->
         <activity
             android:name="com.zs.wanandroid.ui.main.MainActivity"
             android:screenOrientation="portrait"
-            android:launchMode="singleTask"/> <!-- 登陆 -->
+            android:launchMode="singleTask"/>
+        <!-- 登陆 -->
         <activity
             android:name="com.zs.wanandroid.ui.login.LoginActivity"
             android:screenOrientation="portrait"
-            android:launchMode="singleTask"/> <!-- web -->
+            android:launchMode="singleTask"/>
+        <!-- web -->
         <activity
             android:name="com.zs.wanandroid.ui.web.WebActivity"
             android:screenOrientation="portrait"
-            android:launchMode="singleTask"/> <!-- 收藏 -->
+            android:launchMode="singleTask"/>
+        <!-- 收藏 -->
         <activity
             android:name="com.zs.wanandroid.ui.collect.CollectActivity"
             android:screenOrientation="portrait"
             android:launchMode="singleTask"/>
+        <!-- 搜索 -->
+        <activity android:name="com.zs.wanandroid.ui.search.SearchActivity"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask"/>
+        <!-- 轻松一下 -->
         <activity android:name="com.zs.wanandroid.ui.girl.GirlActivity"
             android:screenOrientation="portrait"
             android:launchMode="singleTask"/>
