--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
     //android官方依赖包
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -73,5 +72,8 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:core:3.3.0'
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'org.greenrobot:greendao:3.2.2'
+
+    implementation 'com.github.hackware1993:MagicIndicator:1.6.0'
+    implementation 'pub.devrel:easypermissions:3.0.0'
 
 }
