--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,51 +18,45 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name="com.zs.wanandroid.ui.rank.RankActivity"></activity>
         <activity
             android:name="com.zs.wanandroid.ui.SplashActivity"
             android:screenOrientation="portrait"
-
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!-- 设置 -->
+        </activity> <!-- 设置 -->
         <activity
             android:name="com.zs.wanandroid.ui.set.SetActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTask"/>
-        <!-- 主界面 -->
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" /> <!-- 主界面 -->
         <activity
             android:name="com.zs.wanandroid.ui.main.MainActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTask"/>
-        <!-- 登陆 -->
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" /> <!-- 登陆 -->
         <activity
             android:name="com.zs.wanandroid.ui.login.LoginActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTask"/>
-        <!-- web -->
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" /> <!-- web -->
         <activity
             android:name="com.zs.wanandroid.ui.web.WebActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTask"/>
-        <!-- 收藏 -->
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" /> <!-- 收藏 -->
         <activity
             android:name="com.zs.wanandroid.ui.collect.CollectActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTask"/>
-        <!-- 搜索 -->
-        <activity android:name="com.zs.wanandroid.ui.search.SearchActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTask"/>
-        <!-- 轻松一下 -->
-        <activity android:name="com.zs.wanandroid.ui.girl.GirlActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTask"/>
-
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" /> <!-- 搜索 -->
+        <activity
+            android:name="com.zs.wanandroid.ui.search.SearchActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" /> <!-- 轻松一下 -->
+        <activity
+            android:name="com.zs.wanandroid.ui.girl.GirlActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
