更换cookie持久化方式

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,5 +75,6 @@ dependencies {
     implementation 'com.github.hackware1993:MagicIndicator:1.6.0'
     implementation 'pub.devrel:easypermissions:3.0.0'
     implementation 'com.github.donkingliang:LabelsView:1.6.1'
+    implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
 
 }
