完成积分界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.zs.wanandroid.ui.rank.RankActivity"></activity>
+        <activity android:name="com.zs.wanandroid.ui.Integral.IntegralActivity"></activity>
+        <activity android:name="com.zs.wanandroid.ui.rank.RankActivity" />
         <activity
             android:name="com.zs.wanandroid.ui.SplashActivity"
             android:screenOrientation="portrait"
