--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.zs.wanandroid.ui.Integral.IntegralActivity"></activity>
+        <activity android:name="com.zs.wanandroid.ui.history.HistoryActivity"></activity>
+        <activity android:name="com.zs.wanandroid.ui.my.MyArticleActivity" />
+        <activity android:name="com.zs.wanandroid.ui.add.AddArticleActivity" />
+        <activity android:name="com.zs.wanandroid.ui.Integral.IntegralActivity" />
         <activity android:name="com.zs.wanandroid.ui.rank.RankActivity" />
         <activity
             android:name="com.zs.wanandroid.ui.SplashActivity"
