--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName "0.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         compileOptions {
@@ -21,10 +21,23 @@ android {
         }
     }
 
+    //配置keystore签名
+    signingConfigs {
+        release {
+            storeFile file('/Users/edz/StudioProjects/wanandroid.jks')
+            storePassword "zs120909.."
+            keyAlias 'wanandroid'
+            keyPassword "zs120909.."
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+        debug {
+            minifyEnabled false
         }
     }
 
