--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,20 +21,20 @@ android {
         }
     }
 
-    //配置keystore签名
-    signingConfigs {
-        release {
-            storeFile file('/Users/edz/StudioProjects/wanandroid.jks')
-            storePassword "zs120909.."
-            keyAlias 'wanandroid'
-            keyPassword "zs120909.."
-        }
-    }
+//    //配置keystore签名
+//    signingConfigs {
+//        release {
+//            storeFile file('/Users/edz/StudioProjects/wanandroid.jks')
+//            storePassword "zs120909.."
+//            keyAlias 'wanandroid'
+//            keyPassword "zs120909.."
+//        }
+//    }
 
     buildTypes {
         release {
             minifyEnabled false
-            signingConfig signingConfigs.release
+            //signingConfig signingConfigs.release
         }
         debug {
             minifyEnabled false
